# CI2024_lab1

./: README.md  pyproject.toml  set_cover.ipynb  set_cover.py
