[tool.poetry]
name = "ci2024-lab1"
version = "0.1.0"
description = ""
authors = ["Daviruss1969 <lukasloiodic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
